@@ -1,3 +1,8 @@
+2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
+
+	* preferences.[ch]: Rename preferences to bg_preferences to avoid
+	possible namespace collision
+
 2001-12-18  Bradford Hovinen  <hovinen@ximian.com>
 
 	* preferences.c: Update GConf keys to use /desktop/gnome/background
